<resources>
    <string name="app_name">BMI</string>
    <string name="title_text">Калькулятор \nиндекса массы тела</string>
    <string name="weight_input_text">Введите рост (см)</string>
    <string name="height_input_text">Введите вес (кг)</string>
    <string name="calculate_text">Расчитать</string>
    <string name="weight_text">Рост:</string>
    <string name="height_text">Вес:</string>
    <string name="validate_input_height_text">Введите рост в диапазоне от 50 до 250</string>
    <string name="validate_input_weight_text">Введите вес в диапазоне от 5 до 500</string>
    <string name="input_data_text">Введите данные</string>
    <string name="input_data_height_text">Введите рост</string>
    <string name="input_data_weight_text">Введите вес</string>
</resources>